@@ -28,6 +28,7 @@ import java.util.Iterator;
 import java.util.LinkedList;
 
 import lucee.commons.io.IOUtil;
+import lucee.commons.io.log.LogUtil;
 import lucee.commons.io.res.Resource;
 import lucee.commons.io.res.util.ResourceUtil;
 import lucee.commons.lang.ClassUtil;
@@ -267,7 +268,8 @@ public abstract class PageExceptionImpl extends PageException {
 					}
 				}
 			}
-			catch (Throwable th) {}
+			catch (Throwable th) {
+			}
 
 			// check last
 			if (tagContext.size() > 0) {
@@ -275,17 +277,18 @@ public abstract class PageExceptionImpl extends PageException {
 					Struct last = (Struct) tagContext.getE(tagContext.size());
 					if (last.get(KeyConstants._Raw_Trace).equals(trace.toString())) continue;
 				}
-				catch (Exception e) {}
+				catch (Exception e) {
+				}
 			}
 
 			item = new StructImpl();
 			line = trace.getLineNumber();
 			item.setEL(KeyConstants._template, dspPath);
-			item.setEL(KeyConstants._line, new Double(line));
+			item.setEL(KeyConstants._line, Double.valueOf(line));
 			item.setEL(KeyConstants._id, "??");
 			item.setEL(KeyConstants._Raw_Trace, trace.toString());
 			item.setEL(KeyConstants._type, "cfml");
-			item.setEL(KeyConstants._column, new Double(0));
+			item.setEL(KeyConstants._column, Double.valueOf(0));
 			if (content != null) {
 				if (content.length > 0) {
 					item.setEL(KeyConstants._codePrintHTML, getCodePrint(content, line, true));
@@ -357,7 +360,8 @@ public abstract class PageExceptionImpl extends PageException {
 		try {
 			ro.clearBuffer();
 		}
-		catch (IOException ioe) {}
+		catch (IOException ioe) {
+		}
 		if (gc == null) return "";
 		return gc;
 	}
@@ -381,7 +385,7 @@ public abstract class PageExceptionImpl extends PageException {
 
 	@Override
 	public void addContext(PageSource ps, int line, int column, StackTraceElement element) {
-		if (line == -187) {
+		if (line == -187 && ps != null) {
 			sources.add(ps);
 			return;
 		}
@@ -389,20 +393,22 @@ public abstract class PageExceptionImpl extends PageException {
 		Struct struct = new StructImpl();
 		// print.out(pr.getDisplayPath());
 		try {
-			String[] content = ps.getSource();
-			struct.set(KeyConstants._template, ps.getDisplayPath());
-			struct.set(KeyConstants._line, new Double(line));
-			struct.set(KeyConstants._id, "??");
-			struct.set(KeyConstants._Raw_Trace, (element != null) ? element.toString() : "");
-			struct.set(KeyConstants._Type, "cfml");
-			struct.set(KeyConstants._column, new Double(column));
+			String[] content = ps == null ? null : ps.getSource();
+			struct.setEL(KeyConstants._template, ps == null ? "" : ps.getDisplayPath());
+			struct.setEL(KeyConstants._line, Double.valueOf(line));
+			struct.setEL(KeyConstants._id, "??");
+			struct.setEL(KeyConstants._Raw_Trace, (element != null) ? element.toString() : "");
+			struct.setEL(KeyConstants._Type, "cfml");
+			struct.setEL(KeyConstants._column, Double.valueOf(column));
 			if (content != null) {
-				struct.set(KeyConstants._codePrintHTML, getCodePrint(content, line, true));
-				struct.set(KeyConstants._codePrintPlain, getCodePrint(content, line, false));
+				struct.setEL(KeyConstants._codePrintHTML, getCodePrint(content, line, true));
+				struct.setEL(KeyConstants._codePrintPlain, getCodePrint(content, line, false));
 			}
-			tagContext.append(struct);
+			tagContext.appendEL(struct);
 		}
-		catch (Exception e) {}
+		catch (Exception e) {
+			LogUtil.logGlobal(ThreadLocalPageContext.getConfig(), PageException.class.getName(), e);
+		}
 	}
 
 	private static String getCodePrint(String[] content, int line, boolean asHTML) {
@@ -476,7 +482,8 @@ public abstract class PageExceptionImpl extends PageException {
 				htmlBox.appendRow(1, new SimpleDumpData("Code"), code);
 
 			}
-			catch (PageException e) {}
+			catch (PageException e) {
+			}
 		}
 
 		// Java Stacktrace
