@@ -61,7 +61,7 @@ import lucee.runtime.java.JavaObject;
 import lucee.runtime.op.Caster;
 import lucee.runtime.op.Decision;
 import lucee.runtime.op.Duplicator;
-import lucee.runtime.op.Operator;
+import lucee.runtime.op.OpUtil;
 import lucee.runtime.reflection.pairs.ConstructorInstance;
 import lucee.runtime.reflection.pairs.MethodInstance;
 import lucee.runtime.reflection.storage.SoftMethodStorage;
@@ -81,6 +81,7 @@ import lucee.runtime.type.util.CollectionUtil;
 import lucee.runtime.type.util.KeyConstants;
 import lucee.runtime.type.util.ListUtil;
 import lucee.runtime.type.util.Type;
+import lucee.runtime.util.ObjectIdentityHashSet;
 import lucee.transformer.bytecode.util.JavaProxyFactory;
 
 /**
@@ -354,7 +355,7 @@ public final class Reflector {
 
 			// CF Equal
 			try {
-				if (Operator.equals(src, trg, false, true)) {
+				if (OpUtil.equals(ThreadLocalPageContext.get(), src, trg, false, true)) {
 					rating.plus(3);
 					return trg;
 				}
@@ -412,7 +413,7 @@ public final class Reflector {
 			if (trgClass == Double.class) return Caster.toDouble(src);
 			if (trgClass == Character.class) {
 				String str = Caster.toString(src, null);
-				if (str != null && str.length() == 1) return new Character(str.charAt(0));
+				if (str != null && str.length() == 1) return Character.valueOf(str.charAt(0));
 			}
 		}
 
@@ -468,11 +469,9 @@ public final class Reflector {
 	}
 
 	private static Object componentToClass(PageContext pc, Component src, Class trgClass, RefInteger rating) throws PageException {
-
 		try {
 			JavaAnnotation ja = getJavaAnnotation(pc, trgClass.getClassLoader(), src);
 			Class<?> _extends = ja != null && ja.extend != null ? ja.extend : null;
-
 			return JavaProxyFactory.createProxy(pc, src, _extends, extractImplements(pc, src, ja, trgClass, rating));
 		}
 		catch (Exception e) {
@@ -480,7 +479,7 @@ public final class Reflector {
 		}
 	}
 
-	private static Class<?>[] extractImplements(PageContext pc, Component cfc, JavaAnnotation ja, Class<?> trgClass, RefInteger rating) throws PageException {
+	private static Class<?>[] extractImplements(PageContext pc, Component cfc, JavaAnnotation ja, Class<?> trgClass, RefInteger ratings) throws PageException {
 		Struct md = cfc.getMetaData(pc);
 		Object implementsjavaObj = md.get(KeyConstants._implementsjava, null);
 		Class<?>[] implementsjava = null;
@@ -492,7 +491,7 @@ public final class Reflector {
 			else if (Decision.isCastableToString(implementsjavaObj)) {
 				arr = ListUtil.listToStringArray(Caster.toString(md.get(KeyConstants._implementsjava), null), ',');
 			}
-			rating.plus(0);
+			if (ratings != null) ratings.plus(0);
 			if (arr != null) {
 				List<Class<?>> list = new ArrayList<Class<?>>();
 				Class<?> tmp;
@@ -500,8 +499,8 @@ public final class Reflector {
 					tmp = ClassUtil.loadClass(Caster.toString(md.get(KeyConstants._implementsjava), null), null);
 					if (tmp != null) {
 						list.add(tmp);
-						if (isInstaneOf(tmp, trgClass, true)) rating.plus(6);
-						else if (isInstaneOf(tmp, trgClass, false)) rating.plus(5);
+						if (ratings != null && isInstaneOf(tmp, trgClass, true)) ratings.plus(6);
+						else if (ratings != null && isInstaneOf(tmp, trgClass, false)) ratings.plus(5);
 					}
 				}
 				implementsjava = list.toArray(new Class[list.size()]);
@@ -552,7 +551,8 @@ public final class Reflector {
 		try {
 			md = src.getMetaData(pc);
 		}
-		catch (PageException pe) {}
+		catch (PageException pe) {
+		}
 
 		String str;
 		JavaAnnotation ja = null;
@@ -561,7 +561,8 @@ public final class Reflector {
 			try {
 				sct = Caster.toStruct(DeserializeJSON.call(pc, str), null);
 			}
-			catch (Exception e) {}
+			catch (Exception e) {
+			}
 			if (sct == null) return null;
 
 			// interfaces
@@ -759,14 +760,14 @@ public final class Reflector {
 	private static Object[] cleanArgs(Object[] args) {
 		if (args == null) return args;
 
-		Set<Object> done = new HashSet<Object>();
+		ObjectIdentityHashSet done = new ObjectIdentityHashSet();
 		for (int i = 0; i < args.length; i++) {
 			args[i] = _clean(done, args[i]);
 		}
 		return args;
 	}
 
-	private static Object _clean(Set<Object> done, Object obj) {
+	private static Object _clean(ObjectIdentityHashSet done, Object obj) {
 		if (done.contains(obj)) return obj;
 		done.add(obj);
 		try {
@@ -789,7 +790,7 @@ public final class Reflector {
 		return obj;
 	}
 
-	private static Object _clean(Set<Object> done, Collection coll) {
+	private static Object _clean(ObjectIdentityHashSet done, Collection coll) {
 		Iterator<Object> vit = coll.valueIterator();
 		Object v;
 		boolean change = false;
@@ -812,7 +813,7 @@ public final class Reflector {
 		return coll;
 	}
 
-	private static Object _clean(Set<Object> done, Map map) {
+	private static Object _clean(ObjectIdentityHashSet done, Map map) {
 		Iterator vit = map.values().iterator();
 		Object v;
 		boolean change = false;
@@ -836,7 +837,7 @@ public final class Reflector {
 		return map;
 	}
 
-	private static Object _clean(Set<Object> done, List list) {
+	private static Object _clean(ObjectIdentityHashSet done, List list) {
 		Iterator it = list.iterator();
 		Object v;
 		boolean change = false;
@@ -858,7 +859,7 @@ public final class Reflector {
 		return list;
 	}
 
-	private static Object _clean(Set<Object> done, Object[] src) {
+	private static Object _clean(ObjectIdentityHashSet done, Object[] src) {
 		boolean change = false;
 		for (int i = 0; i < src.length; i++) {
 			if (src[i] != _clean(done, src[i])) {
@@ -1388,7 +1389,8 @@ public final class Reflector {
 					fields[i].set(obj, convert(value, toReferenceClass(fields[i].getType()), null));
 					return true;
 				}
-				catch (PageException e) {}
+				catch (PageException e) {
+				}
 			}
 		}
 		catch (Exception e) {
@@ -1542,7 +1544,7 @@ public final class Reflector {
 	private static Byte[] toRefArray(byte[] src) {
 		Byte[] trg = new Byte[src.length];
 		for (int i = 0; i < trg.length; i++) {
-			trg[i] = new Byte(src[i]);
+			trg[i] = Byte.valueOf(src[i]);
 		}
 		return trg;
 	}
@@ -1550,7 +1552,7 @@ public final class Reflector {
 	private static Character[] toRefArray(char[] src) {
 		Character[] trg = new Character[src.length];
 		for (int i = 0; i < trg.length; i++) {
-			trg[i] = new Character(src[i]);
+			trg[i] = Character.valueOf(src[i]);
 		}
 		return trg;
 	}
@@ -1582,7 +1584,7 @@ public final class Reflector {
 	private static Float[] toRefArray(float[] src) {
 		Float[] trg = new Float[src.length];
 		for (int i = 0; i < trg.length; i++) {
-			trg[i] = new Float(src[i]);
+			trg[i] = Float.valueOf(src[i]);
 		}
 		return trg;
 	}
@@ -1590,7 +1592,7 @@ public final class Reflector {
 	private static Double[] toRefArray(double[] src) {
 		Double[] trg = new Double[src.length];
 		for (int i = 0; i < trg.length; i++) {
-			trg[i] = new Double(src[i]);
+			trg[i] = Double.valueOf(src[i]);
 		}
 		return trg;
 	}
